Using streams wherever possible (#3)